fixed overflow

--- a/css.css
+++ b/css.css
@@ -2004,7 +2004,7 @@ a {
     font-size: 1.5em;
     font-weight: 900;
     text-decoration: underline;
-    margin-bottom: -10px
+    margin-bottom: -10px;
 }
 
 .images {
@@ -2014,7 +2014,7 @@ a {
 }
 
 .image-text {
-    color:grey;
+    color: grey;
     font-size: 0.8em;
     margin-bottom: 10px;
 }
@@ -2034,5 +2034,5 @@ li {
     margin-bottom: 5px;
     background-color: wheat;
     box-shadow: none;
-    width: 1000px;    
+    width: 1000px;
 }
